chenges in article to main & css class

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </head>
   <body>
     <div class="center">
-      <section class="main">
-        <article class="daniel box">
+      <section class="mainContainer">
+        <main class="daniel box">
           <header class="about">
             <img
               class="profile img-responsive"
@@ -57,7 +57,7 @@
             completing the course, I’ve successfully switched careers, working
             as a Software Engineer at a VR startup. ”
           </p>
-        </article>
+        </main>
         <article class="jonathan box">
           <header class="about">
             <img
