--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="center">
       <section class="mainContainer">
-        <main class="daniel box">
+        <article class="daniel box">
           <header class="about">
             <img
               class="profile img-responsive"
@@ -57,7 +57,7 @@
             completing the course, I’ve successfully switched careers, working
             as a Software Engineer at a VR startup. ”
           </p>
-        </main>
+        </article>
         <article class="jonathan box">
           <header class="about">
             <img
