--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </head>
   <body>
     <div class="center">
+      <main class="project-heading">
+        <h1 class="">Testimonials grid section</h1>
+      </main>
       <section class="mainContainer">
         <article class="daniel box">
           <header class="about">
@@ -39,7 +42,7 @@
               alt="profile-pic"
             />
             <div class="head__title">
-              <h1 class="title">Daniel Clifford</h1>
+              <h2 class="title">Daniel Clifford</h2>
               <p class="sub-title">Verified Graduate</p>
             </div>
           </header>
@@ -66,7 +69,7 @@
               alt="profile-pic"
             />
             <div class="head__title">
-              <h1 class="title">Jonathan Walters</h1>
+              <h2 class="title">Jonathan Walters</h2>
               <p class="sub-title">Verified Graduate</p>
             </div>
           </header>
@@ -87,7 +90,7 @@
               alt="profile-pic"
             />
             <div class="head__title">
-              <h1 class="title title_f">Jeanette Harmon</h1>
+              <h2 class="title title_f">Jeanette Harmon</h2>
               <p class="sub-title title__f">Verified Graduate</p>
             </div>
           </header>
@@ -105,7 +108,7 @@
               alt="profile-pic"
             />
             <div class="head__title">
-              <h1 class="title">Patrick Abrams</h1>
+              <h2 class="title">Patrick Abrams</h2>
               <p class="sub-title">Verified Graduate</p>
             </div>
           </header>
@@ -131,7 +134,7 @@
               alt="profile-pic"
             />
             <div class="head__title">
-              <h1 class="title title_f">Kira Whittle</h1>
+              <h2 class="title title_f">Kira Whittle</h2>
               <p class="sub-title title__f">Verified Graduate</p>
             </div>
           </header>
